[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://art/Dice.png" type="Texture" id=2]
[ext_resource path="res://art/Ptony.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.18921
margin_top = 1.18921
margin_right = -1.18921
margin_bottom = 1.18921
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.917647, 0.886275, 0.670588, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="."]
margin_left = 491.0
margin_top = 150.0
margin_right = 532.0
margin_bottom = 169.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 20.5954, 6.79944 )
custom_colors/font_color = Color( 0.188235, 0.541176, 0.823529, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Greed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 480.0
margin_top = 248.0
margin_right = 543.0
margin_bottom = 352.0
custom_constants/separation = 22

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 63.0
margin_bottom = 62.0
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 63.0
margin_bottom = 104.0
text = "Quit"

[node name="Decorations" type="Node2D" parent="."]

[node name="Dice" type="Sprite" parent="Decorations"]
position = Vector2( 109.443, 118.443 )
scale = Vector2( 1.28887, 1.28887 )
texture = ExtResource( 2 )

[node name="chair2" type="Sprite" parent="Decorations"]
visible = false
position = Vector2( 942, 69 )
scale = Vector2( 0.24, 0.24 )

[node name="Ptony" type="Sprite" parent="Decorations"]
position = Vector2( 867.011, 418.011 )
scale = Vector2( 1.83979, 1.83979 )
texture = ExtResource( 3 )

[node name="chair4" type="Sprite" parent="Decorations"]
visible = false
position = Vector2( 58, 496 )
scale = Vector2( 0.24, 0.24 )

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 572.0
margin_right = 78.0
margin_bottom = 592.0
text = "INFO"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="Options"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="info_button"]
